# geodata

./: .gitignore  README.md  color_transport_5d_v1.ipynb  color_transport_5d_v2.ipynb  launch.sh  monitor_memory.sh  monitor_memory_simple.sh  pyproject.toml
experiments/pixelart/: compute_times_rho0.7.json  compute_times_rho1.0.json  rho_l2_comparison_lambda2.5.npz
model/sinkhorngan/Sinkhorn-GAN/: sinkhorn_gan_images.py
notebooks/: 5d_transport.ipynb  EXPERIMENTS_SETUP.md  EXPERIMENTS_STATUS.md  RUN_EXPERIMENTS.md  ablation_studies.py  analyze_pokemon_experiments.ipynb  analyze_pokemon_experiments.py  benchmark_compute_time.py  create_gifs_and_viz.py  create_rho1_timelines_figure.py  experiments_5d_massive.py  experiments_pokemon_large_scale.py  explain_geometric_expansion.md  metrics_5d.py  plot_dynamic_rasterization_validation.py  plot_lambda_ablation.py  plot_rho_ablation.py  plot_rho_l2_comparison.py  plot_sigma_min_ablation.py  plot_splatting_tearing_comparison.py  plot_splatting_validation.py  plot_transport_timelines.py  run_pokemon_experiments.sh  runall.py  test_barycenters.ipynb  transport_2D_par_couleur.ipynb  transport_pixelart.ipynb  visualize_sigma_expansion.py
notebooks/former/: image_viz.ipynb
notebooks/ref/: tosend.py
refs/notes/: notes.md
refs/reports/: 5dtransport.aux  5dtransport.out  CHANGES.md  MERGE_SUMMARY.md  former.tex  idea.md  report.aux  report.out  xxxx.tex
refs/texsources/complexitybounds/: SinkhornSampleComplexity.bbl  SinkhornSampleComplexity.out  SinkhornSampleComplexity.synctex  SinkhornSampleComplexity.tex  method.tex  (+2 more)
(+180 files in other folders)
